[gd_scene load_steps=2 format=3 uid="uid://covk5qel4dban"]

[ext_resource type="Script" uid="uid://dd3n7pf7wd5km" path="res://scenes/status_handler/status_handler.gd" id="1_7of5l"]

[node name="StatusHandler" type="GridContainer"]
mouse_filter = 0
theme_override_constants/h_separation = -6
theme_override_constants/v_separation = 1
columns = 4
script = ExtResource("1_7of5l")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
